--- a/app/profile/profile.module.css
+++ b/app/profile/profile.module.css
@@ -6,6 +6,7 @@
   padding: 0px 16px 40px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'SF Pro Text',
     'Segoe UI', sans-serif;
+    color: var(--test-text);
 }
 
 .content {
@@ -532,6 +533,7 @@
   background: transparent;
   color: var(--color-heading-strong);
   font-weight: 700;
+  font-size: 13px;
 }
 
 .lockedClickable {
